--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
